--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ astor==0.8.1
 async-timeout==4.0.2
 attrdict==2.0.1
 attrs==22.2.0
+autopep8==2.0.2
 Babel==2.11.0
 bce-python-sdk==0.8.74
 beautifulsoup4==4.11.2
@@ -35,6 +36,7 @@ entrypoints==0.4
 et-xmlfile==1.1.0
 fastapi==0.89.1
 ffmpy==0.3.0
+filelock==3.10.7
 fire==0.5.0
 Flask==2.2.2
 flask-babel==3.0.1
@@ -48,11 +50,13 @@ gevent==22.10.2
 geventhttpclient==2.0.8
 google==3.0.0
 gradio==3.17.0
+gradio-client==0.0.7
 greenlet==2.0.1
 grpcio==1.41.0
 h11==0.14.0
 httpcore==0.16.3
 httpx==0.23.3
+huggingface-hub==0.13.3
 idna==3.4
 imageio==2.25.0
 imgaug==0.4.0
@@ -64,6 +68,7 @@ Jinja2==3.1.2
 jmespath==1.0.1
 jsonschema==4.17.3
 kiwisolver==1.4.4
+lazy-loader==0.2
 linkify-it-py==1.0.3
 lmdb==1.4.0
 lxml==4.9.2
@@ -84,21 +89,21 @@ openpyxl==3.0.10
 opt-einsum==3.3.0
 orjson==3.8.5
 packaging==23.0
-paddle==1.0.2
 paddle-bfloat==0.1.7
 paddleocr==2.6.1.2
-paddlepaddle==2.4.1
+paddlepaddle==2.4.2
 pandas==1.5.3
 pdf2docx==0.5.6
 peewee==3.15.4
 Pillow==9.4.0
-pkgutil_resolve_name==1.3.10
+pkgutil-resolve-name==1.3.10
 playwright==1.30.0
 premailer==3.10.0
 protobuf==3.20.0
 prox==0.0.17
 psutil==5.9.4
 pyclipper==1.3.0.post4
+pycodestyle==2.10.0
 pycparser==2.21
 pycryptodome==3.17
 pydantic==1.10.4
@@ -123,6 +128,7 @@ rfc3986==1.5.0
 s3transfer==0.6.0
 scikit-image==0.19.3
 scipy==1.10.0
+semantic-version==2.10.0
 shapely==2.0.1
 six==1.16.0
 sniffio==1.3.0
@@ -132,14 +138,18 @@ sympy==1.11.1
 termcolor==2.2.0
 tifffile==2023.1.23.1
 tight==0.1.0
+tomli==2.0.1
 toolz==0.12.0
 tqdm==4.64.1
 tritonclient==2.22.0
-typing_extensions==4.4.0
+typing-extensions==4.4.0
+tzdata==2023.3
 uc-micro-py==1.0.1
 urllib3==1.26.14
 uvicorn==0.20.0
 visualdl==2.5.0
+websocket==0.2.1
+websocket-client==1.5.1
 websockets==10.4
 Werkzeug==2.2.2
 x2paddle==1.4.0
